tests/e2e/docker/providers/envoy/basic/envoy.yaml
# Envoy Configuration Generated by GAL
# Provider: envoy
# Services: 1 (0 gRPC, 1 REST)

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ['*']
              routes:
              - match:
                  prefix: '/api/v1'
                route:
                  weighted_clusters:
                    clusters:
                    - name: canary_deployment_api_stable_cluster
                      weight: 90
                    - name: canary_deployment_api_canary_cluster
                      weight: 10
                    total_weight: 100
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: canary_deployment_api_stable_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 5s
    load_assignment:
      cluster_name: canary_deployment_api_stable_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-stable
                port_value: 8080

  - name: canary_deployment_api_canary_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 5s
    load_assignment:
      cluster_name: canary_deployment_api_canary_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-canary
                port_value: 8080

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
